Fixed word overflow in messages

--- a/src/components/IncomingMessage/IncomingMessage.css
+++ b/src/components/IncomingMessage/IncomingMessage.css
@@ -24,6 +24,7 @@
     margin: 0;
     padding: 5px 10px 5px 12px;
     width: 100%;
+    word-wrap: break-word;
 }
 .incoming_msg svg {
     width: 12px;
