--- a/src/components/OutgoingMessage/OutgoingMessage.css
+++ b/src/components/OutgoingMessage/OutgoingMessage.css
@@ -11,9 +11,11 @@
     background: #05728f none repeat scroll 0 0;
     border-radius: 3px;
     font-size: 14px;
-    margin: 0; color:#fff;
+    margin: 0; 
+    color:#fff;
     padding: 5px 10px 5px 12px;
     width:100%;
+    word-wrap: break-word;
 }
 .outgoing_msg .time_date{
     color: #747474;
